# shogo

./: .gitignore  Cargo.toml  README.md  index.html  run.sh
demo/: Cargo.toml  index.html  worker.js
demo/src/: lib.rs
examples/: demo.rs
src/: circle_program.rs  data.rs  dots.rs  engine.rs  lib.rs  points.rs
src/simple2d/: mod.rs  shader.rs
