[package]
name = "shogo"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2021"

[workspace]
members = [ "demo"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
js-sys = "0.3.20"
futures = "0.3"
axgeom = "1.9"
serde = { version = "1.0", features = ["derive"] }

[dependencies.gloo]
version = "*"
features=[
  'futures'
  ]


[dependencies.web-sys]
version = "0.3"
features = [
  'OffscreenCanvas',
  'MessageEvent',
  'DedicatedWorkerGlobalScope',
  'Worker',
  'WorkerOptions',
  'WorkerType',
  'DomRect',
  'CanvasRenderingContext2d',
  'MouseEvent',
  'ErrorEvent',
  'Performance',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  "WebGlUniformLocation",
]
