[package]
name = "shogo"
version = "0.2.1"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2021"
license = "MIT"
description = "webgl game engine using offscreencanvas"
repository = "https://github.com/tiby312/shogo"
keywords = ["canvas", "webgl","webworker","worker","OffscreenCanvas"]
readme = "README.md"
include = ["src/**/*", "LICENSE-MIT", "README.md"]


[workspace]
members = [ "demo"]

[features]
simple2d=[]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
js-sys = "0.3.20"
futures = "0.3"
axgeom = "1.9"
serde = { version = "1.0", features = ["derive"] }

[dependencies.gloo]
version = "0.5"
features=[
  'futures'
  ]


[dependencies.web-sys]
version = "0.3"
features = [
  'OffscreenCanvas',
  'MessageEvent',
  'DedicatedWorkerGlobalScope',
  'Worker',
  'WorkerOptions',
  'WorkerType',
  'DomRect',
  'CanvasRenderingContext2d',
  'MouseEvent',
  'ErrorEvent',
  'Performance',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  "WebGlUniformLocation",
]
