[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.43"
js-sys = "0.3.20"
wasm-bindgen-futures="*"
wengine = {path="../"}

[dependencies.web-sys]
version = "0.3.20"
features = [
  'OffscreenCanvas',
  'DomRect',
  'CanvasRenderingContext2d',
  'MouseEvent',
  'ErrorEvent',
  'MessageEvent',
  'WebSocket',
  'Performance',
  'AudioContext',
  'AudioBuffer',
  'AudioNode',
  'AudioBufferSourceNode',
  'AudioDestinationNode',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'Node',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
]
