[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.43"
wasm-bindgen-futures="*"
js-sys = "0.3.20"
wengine = {path="../"}
web-sys = "0.3.20"
futures="*"

[dependencies.gloo]
version = "*"
features=[
  'futures'
  ]
