[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
web-sys = "0.3"
futures="0.3"
shogo = {path="../", features=['simple2d']}
js-sys = "0.3.20"
serde = { version = "1.0", features = ["derive"] }

[dependencies.gloo]
version = "0.5"
features=[
  'futures'
  ]
